# PyDiamond

./: .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  demo-dev.py  demo.py  main.py  pdm.toml  pyproject.toml  rect.py  requirements-dev.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/actions/: pdm.conf
.github/actions/pre-commit-cache/: action.yml
.github/actions/run-tox/: action.yml
.github/actions/setup-github-actions-bot-user/: action.yml
.github/actions/setup-tox/: action.yml
.github/scripts/: rewrite_bumpversion_cfg.py
.github/workflows/: build-workflow-call.yml  build.yml  cache.yml  lint-format.yml  lint.yml  release.yml  test.yml
devtools/: __init__.py  __main__.py  cli.py  command.py  constants.py  piptools.py  repo.py  venv.py
devtools/commands/: abc.py  piptools.py  repo.py  venv.py
devtools/lint/: flake8_extensions.py
lintingtools/flake8_extensions/: _common.py  dunder_all.py
my_pygame/: __init__.py  _animation.py  animation.py  button.py  checkbox.py  clickable.py  clock.py  colors.py  configuration.py  copyable.py  cursor.py  drawable.py  entry.py  event.py  gradients.py  image.py  keyboard.py  mouse.py  path.py  progress.py  renderer.py  resource.py  scale.py  scene.py  shape.py  sprite.py  surface.py  text.py  theme.py  transformable.py  utils.py  window.py
my_pygame/audio/: sound.py
my_pygame/graphics/: _gradients.py  button.py  color.py  font.py  rect.py  scale.py  shape.py  text.py  theme.py  transformable.py
my_pygame/math/: vector2.py
my_pygame/resource/: __init__.py  loader.py
my_pygame/system/: non_copyable.py  path.py  time.py
my_pygame/window/: clickable.py  display.py  event.py  mouse.py  scene.py
py_diamond/: __init__.py  __init__.pyi  version.py
py_diamond/_patch/: __init__.py  _base.py  _collector.py
py_diamond/_patch/plugins/: __init__.py  environment.py  fix_enum.py  fix_typing.py  pygame_patch.py
py_diamond/audio/: __init__.py  mixer.py  music.py  sound.py
py_diamond/environ/: __init__.py  check.py  executable.py
py_diamond/graphics/: __init__.py  _animation.py  _draw.py  _gradients.py  animation.py  button.py  checkbox.py  color.py  drawable.py  entry.py  font.py  form.py  gradients.py  grid.py  image.py  movable.py  progress.py  rect.py  renderer.py  scale.py  scroll.py  shape.py  sprite.py  surface.py  text.py  theme.py  transformable.py
py_diamond/gui/: __init__.py  focus.py  scene.py
py_diamond/gui/widgets/: __init__.py  abc.py  button.py  checkbox.py  entry.py  form.py  grid.py  scale.py  scroll.py
py_diamond/math/: __init__.py  area.py  interpolation.py  vector2.py  vector2.pyi  vector3.py
py_diamond/network/: __init__.py  client.py  selector.py  server.py
py_diamond/network/protocol/: __init__.py  base.py  compressor.py  encryptor.py  json.py  pickle.py  stream.py
py_diamond/network/socket/: __init__.py  base.py  constants.py  python.py
py_diamond/resource/: __init__.py  loader.py  manager.py
py_diamond/system/: __init__.py  _mangling.py  clock.py  configuration.py  duplicate.py  enum.py  exception.py  namespace.py  non_copyable.py  object.py  overload.py  path.py  proxy.py  singleton.py  theme.py  threading.py  time.py  typing.py  utils.py  validation.py
py_diamond/system/collections/: __init__.py  __init__.pyi  _orderedset.py  _orderedweakset.py  _sorteddict.py
py_diamond/system/dict/: __init__.py  __init__.pyi  _sorteddict.py
py_diamond/system/set/: __init__.py  __init__.pyi  _orderedset.py  _orderedweakset.py
py_diamond/system/utils/: __init__.py  _mangling.py  abc.py  functools.py  (+4 more)
py_diamond/window/: __init__.py  clickable.py  clock.py  cursor.py  dialog.py  display.py  draggable.py  event.py  gui.py  keyboard.py  mouse.py  pressable.py  scene.py  time.py  widget.py
pydiamond/: __init__.py  __init__.pyi  warnings.py
pydiamond/_patch/: _base.py  _collector.py  controller.py
pydiamond/audio/: __init__.py  mixer.py  music.py
pydiamond/environ/: executable.py
pydiamond/graphics/: __init__.py  _gradients.py  animation.py  color.py  drawable.py  font.py  gradients.py  grid.py  image.py  movable.py  progress.py  renderer.py  shape.py  sprite.py  surface.py  text.py  transformable.py
pydiamond/gui/: _grid.py  focus.py  scene.py
pydiamond/math/: __init__.py  area.py  interpolation.py  intersection.py  rect.py  vector2.py
pydiamond/network/: __init__.py  client.py  server.py  socket.py
pydiamond/resource/: loader.py  manager.py
pydiamond/resources/: __init__.py  abc.py  file.py  manager.py  package.py
pydiamond/system/: configuration.py  enum.py  exception.py  namespace.py  non_copyable.py  object.py  path.py  proxy.py  singleton.py  theme.py  threading.py  time.py
pydiamond/window/: __init__.py  clickable.py  controller.py  cursor.py  display.py  draggable.py  event.py  keyboard.py  mouse.py
requirements/: requirements-dev.in  requirements-test.in
src/pydiamond/: __init__.py  __init__.pyi  version.py
tests/: configurable.py  conftest.py  random_port.py  test_import.py  test_object.py  test_ordered_set.py  test_ordered_weak_set.py  test_pep.py  test_protocol.py  test_sorted_dict.py  test_tcp_client.py  test_tcp_server.py  test_tcp_socket.py  test_threads.py  test_udp_client.py  test_udp_server.py  test_udp_socket.py  test_version.py  thread.py
tests/fixtures/: monkeypatch.py  sentinel.py  threading.py
tests/mock/: sys.py
tests/test_audio/: test_mixer.py  test_music.py
tests/test_environ/: test_executable.py
tests/test_graphics/: test_color.py  test_drawable.py  test_font.py
tests/test_misc/: test_constants.py
tests/test_network/: __test_protocol.py  conftest.py  random_port.py  test_protocol.py  test_tcp_client.py  test_tcp_server.py  test_tcp_socket.py  test_udp_client.py  test_udp_server.py  test_udp_socket.py
tests/test_patch/: conftest.py  test_collector.py  test_patch.py  test_plugins.py
tests/test_system/: test_object.py  test_threads.py
tests/test_window/: test_display.py  test_window.py
(+196 files in other folders)
