[build-system]
# Minimum requirements for the build system to execute.
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydiamond-engine"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "FrankySnow9", email = "clairicia.rcj.francis@gmail.com"},
]
license = {file = "LICENSE"}
dependencies = [
  "pygame~=2.6",
  "typing_extensions>=4.4.0,<5"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: pygame",
  "Typing :: Typed"
]
dynamic = ["version", "description"]
keywords = ["game", "game-engine", "game-development", "pygame", "pygame-library", "game-engine-2d"]

[project.urls]
Homepage = "https://github.com/francis-clairicia/PyDiamond"

[dependency-groups]
dev = [
  "bump2version>=1.0.1",
  "flit>=3.7.1,<4",
]
build = [
  "build>=1.0.3,<2",
]
pre-commit = [
  "pre-commit>=4.0,<5",
]
tox = [
  "tox<5,>=4.0.8",
  "tox-pdm~=0.7.2",
]
format = [
  "isort>=6,<7",
  "black>=22.6.0",
]
mypy = [
  "mypy~=1.15",
]
flake8 = [
  "flake8>=7.0,<8",
  "flake8-pyi>=22.11.0",
  "git+https://github.com/francis-clairicia/flake8-dunder-all.git@v0.1.0",
]
test = [
  "pytest~=8.3",
  "pytest-mock~=3.10",
  "pytest-xdist~=3.3",
  "pytest-cov~=6.0",
]
coverage = [
  "coverage~=7.0",
]


############################ Flit configuration ############################
[tool.flit.module]
name = "pydiamond"

[tool.flit.sdist]
include = [
  ".flake8",
]
exclude = [
  ".github/",
  ".vscode/",
  "demo_resources/",
  "devtools/",
  "requirements/",
  "tests/",
  ".gitignore",
  ".gitmodules",
  ".bumpversion.cfg",
  ".pre-commit-config.yaml",
  "demo.py",
  "tox.ini",
]

############################ Development tools configuration ############################

[tool.isort]
profile = "black"
line_length = 130
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "PYDIAMOND", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_pydiamond = ["pydiamond"]
add_imports = ["from __future__ import annotations"]
extend_skip = ["devtools"]

[tool.black]
line-length = 130
target-version = ["py310"]
force-exclude = "(devtools/)"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
python_version = "3.13"
show_error_codes = true
warn_unused_configs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
enable_error_code = ["truthy-bool", "ignore-without-code"]

[tool.pytest.ini_options]
addopts = "--dist=worksteal"
minversion = "7.1.2"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow",
  "functional: marks tests as functional tests",
]

[tool.coverage.run]
branch = true
source_pkgs = [
  "pydiamond",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",

  # Don't complain about type hinting code:
  "if (typing\\.)?TYPE_CHECKING:",
  "@(typing\\.)?overload",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]
